# stop-mocking-everything--the-3-tests-I-start-with-for-a-service

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: container.py  db.py  main.py
app/adapters/fakes/: fake_payment_gateway.py  fake_user_repository.py
app/adapters/real_implementation/: http_payment_gateway.py  sqlite_payment_repository.py  sqlite_user_repository.py
app/domain/: models.py  validation.py
app/ports/: __init__.py  payment_gateway.py  payment_repository.py  user_repository.py
app/services/: payment_eligibility_checker.py  payment_service.py  user_service.py
payment_provider/: Dockerfile  app.py
tests/: __init__.py  conftest.py
tests/contract/: test_payment_gateway_contract.py  test_payment_repository_contract.py  test_user_repository_contract.py
tests/doubles/: __init__.py  payment_gateway_down_stub.py  payment_gateway_fake.py  payment_repository_fake.py
tests/e2e/: test_user_and_payment_flow.py
tests/mocks_antipattern/: test_payment_service_mock_heavy.py  test_user_service_mock_heavy.py
tests/unit/: test_payment_service.py  test_user_service.py  test_validation.py
